一点失误.....具体细节还是不说了23333

--- a/qiniu.conf
+++ b/qiniu.conf
@@ -1,4 +1,4 @@
 [base]
-access_key = EIMQJ8pfbMGYjqD3QNQTSGjJiJEQ75ZSamRHVUAA
-secret_key = s2uVsuF-zP4SqUo8IyS-_Ycn3TLZhH3Qh2X0j4FT
-space_name = whatever
+access_key = 
+secret_key = 
+space_name = 
