--- a/qiniu.conf
+++ b/qiniu.conf
@@ -1,4 +1,9 @@
 [base]
 access_key = 
-secret_key = 
-space_name = 
+secret_key =
+space_name =
+
+[ext]
+username =
+password =
+login_url = https://portal.qiniu.com/signin
